--- a/client/src/components/ToDoList/ToDoList.css
+++ b/client/src/components/ToDoList/ToDoList.css
@@ -32,6 +32,7 @@
     align-items: center;
 }
 
+.toDoDetailsButton,
 .toDoDoneButton,
 .toDoEditButton,
 .toDoDeleteButton {
@@ -48,6 +49,7 @@
     transition: .3s ease-out;
 }
 
+.toDoDetailsButton:hover,
 .toDoDoneButton:hover,
 .toDoEditButton:hover,
 .toDoDeleteButton:hover {
@@ -66,34 +68,4 @@
 
 .buttonDisabled:hover {
     background-color: transparent;
-}
-
-.modalInput {
-    width: 100%;
-    color: var(--secondaryTextColor);
-    background: transparent;
-    font-size: 1.5em;
-    border: 2px solid var(--secondaryBgColor);
-    border-right: none;
-    border-left: none;
-    padding: .4em;
-    margin-bottom: 1.2em;
-}
-
-.modalButton {
-    display: block;
-    width: 80%;
-    color: var(--secondaryTextColor);
-    font-size: 1.3em;
-    background: transparent;
-    border: 2px solid var(--secondaryBgColor);
-    margin: auto;
-    margin-bottom: .5em;
-    padding: .5em 0;
-    transition: .3s ease-out;
-}
-
-.modalButton:focus,
-.modalButton:hover {
-    background-color: var(--secondaryBgColor);
 }
